fixed button alignment

--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,9 @@
 /* Setup */
 :root {
   --primary: hsl(0, 0%, 25%);
-  --secondary: #cc0000;
-  --tertiary: #f1ecec;
+  --secondary: #ac0000;
+  --tertiary: rgb(241, 236, 236);
+  --link: #c00;
   --f6: 2rem;
   --f5: 1.5rem;
   --f4: 1.25rem;
@@ -97,7 +98,7 @@ html {
 }
 
 .extras__item {
-  color: var(--secondary);
+  color: var(--link);
   font-weight: 400;
 }
 
@@ -105,7 +106,7 @@ html {
   font-family: 'FontAwesome';
   content: '\f02b';
   margin: 0 5px 0 -15px;
-  color: #f00;
+  color: var(--link);
 }
 
 .quantity__area {
@@ -149,6 +150,14 @@ html {
   margin-top: 1.5rem;
 }
 
+.button__set > button {
+  margin-right: 10px;
+}
+
+.button__set > button:last-child {
+  margin-right: 0;
+}
+
 .returns {
   display: flex;
   flex-direction: row;
@@ -168,14 +177,15 @@ html {
 }
 
 .btn {
+  flex: 1 1 50%;
   text-transform: uppercase;
-  display: inline;
   border: none;
   border-radius: 3px;
   color: white;
-  font-size: 18px;
+  font-size: var(--f2);
   text-align: center;
-  padding: 10px 43px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .btn__primary {
@@ -183,13 +193,14 @@ html {
 }
 
 .btn__secondary {
-  background: linear-gradient(0deg, red 85%, white);
+  background: linear-gradient(0deg, var(--secondary) 85%, white);
 }
 
 .btn__tertiary {
   background: var(--tertiary);
   color: black;
-  padding: 5px 35px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   font-size: var(--f1);
 }
 
@@ -279,9 +290,14 @@ table {
   margin-top: 0.5rem;
 }
 
-thead tr th {
+th {
   border-bottom: 1px solid var(--primary);
   border-collapse: separate;
   border-spacing: 5px 5px;
   padding-bottom: 15px;
+  vertical-align: top;
+}
+
+td {
+  vertical-align: top;
 }
